crates/dioform/tests/derive_contract/fail/generic_model.rs
#![allow(dead_code)]

use dioform::Form;

#[derive(Form)]
struct GenericForm<T> {
    value: T,
}

fn main() {}
